--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://walihaider2004.github.io/Shopper-Ecommerce",
   "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "tailwindcss": "^3.4.3"
   }
 }
